[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/obj_Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/GameManager.gd" type="Script" id=2]
[ext_resource path="res://Scenes/obj_Map.tscn" type="PackedScene" id=3]

[node name="Root" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "This is a root node"
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 248.468, 522.354 )

[node name="Map" parent="." instance=ExtResource( 3 )]
position = Vector2( 295.277, 314.962 )
z_index = -1

[node name="Spawner1" type="Node2D" parent="."]
position = Vector2( 160, 0 )

[node name="Spawner2" type="Node2D" parent="."]
position = Vector2( 250, 0 )

[node name="Spawner3" type="Node2D" parent="."]
position = Vector2( 340, 0 )

[node name="Spawner4" type="Node2D" parent="."]
position = Vector2( 430, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Spawn_Cooldown"]
